[misk] Refactor misk.resources to eliminate wisp delegation pattern
Summary
misk.resources currently delegates to wisp. This PR copies the Wisp code
into Misk and deprecates the Wisp implementation.

GitOrigin-RevId: 5e02b51386138bb4f0e5e801b31e06330cef937b